FAQs updated and card tilt fixed on small screen

--- a/src/output.css
+++ b/src/output.css
@@ -875,6 +875,11 @@
       max-width: 85%;
     }
   }
+  .sm\:flex-row {
+    @media (width >= 40rem) {
+      flex-direction: row;
+    }
+  }
   .sm\:border-r {
     @media (width >= 40rem) {
       border-right-style: var(--tw-border-style);
